<resources>
    <string name="app_name">SubLinex</string>
    <string name="Google_text_welcome">Welcome to SubLineX</string>
    <string name="sign_in_with_google" translatable="false">Sign In with Google</string>
    <string name="sign_in_with_google_using_firebase">Sign-In with Google </string>
    <string name="sign_in">Sign In</string>
    <string name="name_App">SubLineX</string>
    <string name="App">Application</string>
    <string name="Loading">Loading …</string>
    <string name="Name">Name</string>
    <string name="prix">Prix</string>
    <string name="date">Date</string>
    <string name="Description">Description</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="years">Years</string>
    <string name="slash_of_date">/</string>
    <string name="txt_plus">+</string>
    <string name="main_text_subscription">Subscription</string>
    <string name="main_number_item">1000</string>
    <string name="main_txt_prix">Prix</string>
    <string name="main_prix">1000 $</string>
    <string name="txt_search">search</string>
    <string name="main_exit_Action_bar">Exit</string>
    <string-array name="Date">
        <item>Date</item>
        <item>Month</item>
        <item>Years</item>
    </string-array>


</resources>