<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Google_Authentication">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/google" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:includeFontPadding="false"
            android:paddingTop="20sp"
            android:shadowColor="#0E0E0E"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="45sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/sign_in_with_google_using_firebase"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="170dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:drawableLeft="@drawable/google_icon"
            android:background="@drawable/round_button"
            android:elevation="8dp"
            android:text="@string/sign_in_with_google"
            android:textColor="#fff" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/Google_text_welcome"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />


    </LinearLayout>

</ScrollView>