<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details_of_description">


    <ImageView
        android:id="@+id/datails_img_Upload_Image"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/uplaod_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/icon_ckeck"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_ckeck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/icon_edit"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:src="@drawable/icon_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/datials_txt_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/Name"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datails_img_Upload_Image"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/datials_txt_prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/prix"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datials_txt_Name"
        tools:ignore="TextFields" />



    <LinearLayout
        android:id="@+id/linearLayoutDate"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"

        android:layout_marginEnd="16dp"

        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datials_txt_prix">

        <EditText
            android:id="@+id/datails_date_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:layout_weight="1"
            android:background="@drawable/style_edit_text"
            android:hint="@string/day"
            android:inputType="numberDecimal"
            android:textColorHint="#757575"
            tools:ignore="Autofill,TextFields" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/slash_of_date"
            android:textSize="40sp"
            />


        <EditText
            android:id="@+id/datails_date_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/style_edit_text"
            android:hint="@string/month"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,TextFields" />

    </LinearLayout>


    <EditText
        android:id="@+id/datails_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        android:layout_marginEnd="16dp"
        android:background="@drawable/style_edit_text"
        android:gravity="top"
        android:hint="@string/Description"
        android:inputType="textMultiLine"

        android:lines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDate"
        tools:ignore="Autofill" />





</androidx.constraintlayout.widget.ConstraintLayout>